--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+h2 {
+  color: red;
+  background-color: bisque;
+}
